profiling-using-exp-runner/backup_FINAL_RESULTS/pca_experiment/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: pca_cache, input size: 500
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.pca as module; X = np.random.rand(500,500); X_tuple = tuple(map(tuple, X)); module.pca_cache(X_tuple, 10); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 8.43487131881714 for 0.23219499 sec of execution.
